# TM_Anaylsis

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  key_for_TM.env  make.bat
src/ticketmaster_anaylsis/: __init__.py  ticketmaster_anaylsis.py
tests/: test_ticketmaster_anaylsis.py
