[tool.poetry]
name = "ticketmaster_anaylsis"
version = "0.1.0"
description = "Python package that analysis performer details, event details and venus details in TM."
authors = ["Hanzhen Jiao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
